<?xml version="1.0"?>
<package format="3">
  <name>allegro_api</name>
  <version>0.0.0</version>
  <description>The Allegro c++ API package</description>
  <maintainer email="vlad@touchlab.io">Vladimir Ivan</maintainer>
  <license>Touchlab Limited</license>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>